Use version numbers in database services and mounts
This change has been made to reflect the migration pains developers
experienced when mongo 2.4 was upgraded to 3.6. Users found they
experienced errors trying to use their apps because their mongo mounts
contained databases incompatible with the mongo container.

This change adds the version number to both the mount and service name
so that the version is indicated. When versions of databases change we
can then create a new mount that is only for that version, thereby
starting fresh there. If people wish to maintain data they can always
copy the volume but this wouldn't be automatic.

The approach I took for choosing the fidelity of version numbers was to
look at the options tools like brew provided for installing. For the
(rather old) versions of MySQL, PostgreSQL and Mongo there seemed to be
emphasis on major.minor versions (for example, 9.6 for PostgreSQL) whereas for
newer versions only major versions (for example, 13 for PostgreSQL) -
hopefully once we upgrade past the current major versions we are using
(whenever that day may be) we can flag these entirely at major versions.

I chose not to put versions in the service/mount names of
rabbitmq, redis, and memcache as we don't have any explicit versioning
for them currently. We may want to review this if we are to make these
more representative of what is used on GOV.UK (which is presumably far
older versions).

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,35 +3,35 @@ version: '3.7'
 volumes:
   root-home:
   rabbitmq:
-  postgres:
-  mysql:
-  mongo:
+  postgres-9.6:
+  mysql-5.5:
+  mongo-3.6:
   go:
-  elasticsearch6:
+  elasticsearch-6:
 
 services:
-  postgres:
+  postgres-9.6:
     image: postgres:9.6
     environment:
       POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
-      - postgres:/var/lib/postgresql/data
+      - postgres-9.6:/var/lib/postgresql/data
 
   memcached:
     image: memcached
 
-  mongo:
+  mongo-3.6:
     image: mongo:3.6
     volumes:
-      - mongo:/data/db
+      - mongo-3.6:/data/db
     ports:
       - "27017:27017"
       - "28017:28017"
 
-  mysql:
+  mysql-5.5:
     image: mysql:5.5.58
     volumes:
-      - mysql:/var/lib/mysql
+      - mysql-5.5:/var/lib/mysql
     command: --max_allowed_packet=1073741824
     environment:
       MYSQL_ROOT_PASSWORD: root
@@ -44,7 +44,7 @@ services:
     volumes:
       - rabbitmq:/var/lib/rabbitmq
 
-  elasticsearch6:
+  elasticsearch-6:
     image: elasticsearch:6.7.0
     environment:
       - http.host=0.0.0.0
@@ -52,7 +52,7 @@ services:
       - xpack.security.enabled=false
       - ES_JAVA_OPTS=-Xms1g -Xmx1g
     volumes:
-      - elasticsearch6:/usr/share/elasticsearch/data
+      - elasticsearch-6:/usr/share/elasticsearch/data
 
   nginx-proxy:
     image: jwilder/nginx-proxy:latest
