--- a/projects/content-publisher/docker-compose.yml
+++ b/projects/content-publisher/docker-compose.yml
@@ -22,17 +22,17 @@ services:
   content-publisher-lite:
     <<: *content-publisher
     depends_on:
-      - postgres
+      - postgres-9.6
       - redis
     environment:
-      DATABASE_URL: "postgresql://postgres@postgres/content-publisher"
-      TEST_DATABASE_URL: "postgresql://postgres@postgres/content-publisher-test"
+      DATABASE_URL: "postgresql://postgres@postgres-9.6/content-publisher"
+      TEST_DATABASE_URL: "postgresql://postgres@postgres-9.6/content-publisher-test"
       REDIS_URL: redis://redis
 
   content-publisher-app: &content-publisher-app
     <<: *content-publisher
     depends_on:
-      - postgres
+      - postgres-9.6
       - redis
       - content-publisher-worker
       - publishing-api-app
@@ -40,7 +40,7 @@ services:
       - nginx-proxy
       - content-store-app
     environment:
-      DATABASE_URL: "postgresql://postgres@postgres/content-publisher"
+      DATABASE_URL: "postgresql://postgres@postgres-9.6/content-publisher"
       REDIS_URL: redis://redis
       VIRTUAL_HOST: content-publisher.dev.gov.uk
       BINDING: 0.0.0.0
@@ -51,11 +51,11 @@ services:
   content-publisher-worker:
     <<: *content-publisher
     depends_on:
-      - postgres
+      - postgres-9.6
       - redis
       - publishing-api-app
       - asset-manager-app
     environment:
-      DATABASE_URL: "postgresql://postgres@postgres/content-publisher"
+      DATABASE_URL: "postgresql://postgres@postgres-9.6/content-publisher"
       REDIS_URL: redis://redis
     command: bundle exec sidekiq -C ./config/sidekiq.yml
