--- a/projects/router-api/docker-compose.yml
+++ b/projects/router-api/docker-compose.yml
@@ -20,20 +20,20 @@ services:
   router-api-lite:
     <<: *router-api
     depends_on:
-      - mongo
+      - mongo-3.6
     environment:
-      MONGODB_URI: "mongodb://mongo/router"
-      TEST_MONGODB_URI: "mongodb://mongo/router-test"
+      MONGODB_URI: "mongodb://mongo-3.6/router"
+      TEST_MONGODB_URI: "mongodb://mongo-3.6/router-test"
 
   router-api-app: &router-api-app
     <<: *router-api
     depends_on:
-      - mongo
+      - mongo-3.6
       - router-app
       - nginx-proxy
     environment:
       ROUTER_NODES: router-app:3055
-      MONGODB_URI: "mongodb://mongo/router"
+      MONGODB_URI: "mongodb://mongo-3.6/router"
       VIRTUAL_HOST: router-api.dev.gov.uk
       BINDING: 0.0.0.0
     expose:
