--- a/projects/support-api/docker-compose.yml
+++ b/projects/support-api/docker-compose.yml
@@ -20,21 +20,21 @@ services:
   support-api-lite:
     <<: *support-api
     depends_on:
-      - postgres
+      - postgres-9.6
       - redis
     environment:
-      DATABASE_URL: "postgresql://postgres@postgres/support-api"
-      TEST_DATABASE_URL: "postgresql://postgres@postgres/support-api-test"
+      DATABASE_URL: "postgresql://postgres@postgres-9.6/support-api"
+      TEST_DATABASE_URL: "postgresql://postgres@postgres-9.6/support-api-test"
       REDIS_URL: redis://redis
 
   support-api-app: &support-api-app
     <<: *support-api
     depends_on:
-      - postgres
+      - postgres-9.6
       - redis
       - nginx-proxy
     environment:
-      DATABASE_URL: "postgresql://postgres@postgres/support-api"
+      DATABASE_URL: "postgresql://postgres@postgres-9.6/support-api"
       REDIS_URL: redis://redis
       VIRTUAL_HOST: support-api.dev.gov.uk
       BINDING: 0.0.0.0
