--- a/projects/service-manual-publisher/docker-compose.yml
+++ b/projects/service-manual-publisher/docker-compose.yml
@@ -20,8 +20,8 @@ services:
   service-manual-publisher-lite:
     <<: *service-manual-publisher
     depends_on:
-      - postgres
+      - postgres-9.6
     environment:
-      DATABASE_URL: "postgresql://postgres@postgres/service-manual-publisher"
-      TEST_DATABASE_URL: "postgresql://postgres@postgres/service-manual-publisher-test"
+      DATABASE_URL: "postgresql://postgres@postgres-9.6/service-manual-publisher"
+      TEST_DATABASE_URL: "postgresql://postgres@postgres-9.6/service-manual-publisher-test"
       DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL: "true"
