Remove PhantomJS and superfluous docker files
This acts as a bit of a cleanup of unnecessary extras in our
Dockerfiles. We are hopefully now free from PhantomJS and no longer need
to install it, thus this has been removed from all images.

I also couldn't find reasons why Travel Advice Publisher and Specialist
Publisher needed to keep their own Dockerfiles so I've removed them.
Hopefully I've not missed something obvious.

--- a/projects/specialist-publisher/docker-compose.yml
+++ b/projects/specialist-publisher/docker-compose.yml
@@ -6,7 +6,7 @@ volumes:
 x-specialist-publisher: &specialist-publisher
   build:
     context: .
-    dockerfile: projects/specialist-publisher/Dockerfile
+    dockerfile: Dockerfile.govuk-base
   image: specialist-publisher
   stdin_open: true
   tty: true
