Set REDIS_URL env vars where there are REDIS_HOST vars
This is to allow transitioning the remaining apps that need REDIS_HOST
over to use REDIS_URL and allow us to remove REDIS_HOST and REDIS_PORT
env vars.

--- a/projects/contacts-admin/docker-compose.yml
+++ b/projects/contacts-admin/docker-compose.yml
@@ -28,4 +28,5 @@ services:
       DATABASE_URL: "mysql2://root:root@mysql-5.5/contacts_development"
       TEST_DATABASE_URL: "mysql2://root:root@mysql-5.5/contacts_test"
       REDIS_HOST: redis
+      REDIS_URL: redis://redis
 
