--- a/projects/short-url-manager/docker-compose.yml
+++ b/projects/short-url-manager/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       MONGODB_URI: "mongodb://mongo-3.6/short-url-manager"
       TEST_MONGODB_URI: "mongodb://mongo-3.6/short-url-manager-test"
       REDIS_HOST: redis
+      REDIS_URL: redis://redis
 
   short-url-manager-app: &short-url-manager-app
     <<: *short-url-manager
@@ -38,7 +39,8 @@ services:
       - publishing-api-app
     environment:
       MONGODB_URI: "mongodb://mongo-3.6/short-url-manager"
-      REDIS_URL: redis
+      REDIS_HOST: redis
+      REDIS_URL: redis://redis
       VIRTUAL_HOST: short-url-manager.dev.gov.uk
       HOST: 0.0.0.0
     expose:
