--- a/projects/signon/docker-compose.yml
+++ b/projects/signon/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       DATABASE_URL: "mysql2://root:root@mysql-5.5/signon_development"
       TEST_DATABASE_URL: "mysql2://root:root@mysql-5.5/signon_test"
       REDIS_HOST: redis
+      REDIS_URL: redis://redis
 
   signon-app:
     <<: *signon
@@ -40,6 +41,7 @@ services:
       VIRTUAL_HOST: signon.dev.gov.uk
       HOST: 0.0.0.0
       REDIS_HOST: redis
+      REDIS_URL: redis://redis
     expose:
       - "3000"
     command: bin/rails s --restart
