--- a/projects/whitehall/docker-compose.yml
+++ b/projects/whitehall/docker-compose.yml
@@ -46,5 +46,4 @@ services:
       BINDING: 0.0.0.0
     expose:
       - "3000"
-    # Change to 'bin/rails --restart' when rails >= 5.2
-    command: /bin/sh -c "rm -f tmp/pids/server.pid && rails s"
+    command: bin/rails s --restart
